refactor: replace Collectors.toList() with .toList() (Java 21 idiomatic)
Replace 11 occurrences of Collectors.toList() with the more idiomatic
Stream.toList() introduced in Java 21 across core service files:
- RagChatHistoryRepository, ChatModelRouter, EmbeddingModelRouter
- RagCollectionController (3 sites), RagDocumentController (2 sites)
- HybridRetrieverService, ReRankingService
- PgEnglishFtsProvider, PgJiebaFulltextProvider, PgTrgmFulltextProvider
- RetrievalEvaluationServiceImpl

Removed unused Collectors imports where applicable.