@@ -83,7 +83,7 @@ public class PgEnglishFtsProvider implements FulltextSearchProvider {
                     })
                     .filter(r -> r.getScore() >= minScore)
                     .limit(limit)
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (Exception e) {
             log.warn("English FTS search failed for query '{}': {}", query, e.getMessage());
             return Collections.emptyList();
